--- a/src/app/checkout/checkout-products/checkout-products.component.html
+++ b/src/app/checkout/checkout-products/checkout-products.component.html
@@ -1,7 +1,7 @@
 <h6 class="bottom-5 loginsubtitle">Componentes</h6>
 <div class="product-item row" *ngFor="let product of products">
     <i class="material-icons notranslate col s2">{{product.icon}}</i>
-    <span class="col s6">{{product.name}}</span>
+    <span class="col s6 notranslate">{{product.name}}</span>
     <span class="col s2">{{product.ammount || 1}}</span>
     <span class="col s2"> $ {{product.price}}</span>
 </div>
