--- a/src/app/creator/shared/ai-button/ai-button.component.html
+++ b/src/app/creator/shared/ai-button/ai-button.component.html
@@ -1,5 +1,5 @@
 <a  class="btn generate-btn valign-wrapper"> 
-    <i *ngIf="hideSpinner" class="material-symbols-outlined 
+    <i *ngIf="hideSpinner" class="material-symbols-outlined notranslate 
  notranslate top-0 bottom-0 valign right-1">bolt</i> 
     <i *ngIf="!hideSpinner" class="material-icons notranslate spinner top-0 bottom-0 sufix valign right-1">autorenew</i>
     <span class="valign right-1">{{label}}</span>
