--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,6 +5,7 @@
     </a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li>
+        <i class="material-icons notranslate grey-text" style="width: 18px; float: left;">g_translate</i>
         <div id="google_translate_element"></div>
       </li>
       <li><a [ngxScrollTo]="'#hero'" class="notranslate "> Home</a></li>
