--- a/src/app/creator/gameform/design/components/components.component.html
+++ b/src/app/creator/gameform/design/components/components.component.html
@@ -3,7 +3,7 @@
   <p class="disclaimer">Arraste para a área de trabalho ou clique 2x para editar</p>
   <div cdkDrag [cdkDragData]="item" *ngFor="let item of creator.componentesData | filterBy: searchTerm" (dblclick)="dragservice.addNewComponent(item)" class="tool-item hoverable" >
     <a routerLinkActive="active" class="grey-text">
-      <i class="material-icons-outlined grey-text">{{item.icon}}</i>
+      <i class="material-icons-outlined notranslate grey-text">{{item.icon}}</i>
       <span class="grey-text">{{item.title}}</span>
     </a>
   </div>
