--- a/src/app/creator/gameform/design/menu/menu.component.html
+++ b/src/app/creator/gameform/design/menu/menu.component.html
@@ -7,14 +7,14 @@
       <app-zoom  [value]="creator.zoomValue" (zoomValueChange)="creator.zoomValueChange($event)"></app-zoom>
     </li> 
     <li class="valign">
-      <a [class.disabled]="history.disablePrevButton()" (click)="history.getPreviousItemSnapshot()" ><i class="material-icons-outlined  black-text">undo</i></a>
-      <a [class.disabled]="history.disableNextButton()" (click)="history.getNextItemSnapshot()" ><i class="material-icons-outlined  black-text">redo</i></a>
+      <a [class.disabled]="history.disablePrevButton()" (click)="history.getPreviousItemSnapshot()" ><i class="material-icons-outlined notranslate  black-text">undo</i></a>
+      <a [class.disabled]="history.disableNextButton()" (click)="history.getNextItemSnapshot()" ><i class="material-icons-outlined notranslate  black-text">redo</i></a>
     </li>
-    <li class="valign"><a ><i class="material-icons-outlined  black-text">more_vert</i></a></li>
+    <li class="valign"><a ><i class="material-icons-outlined notranslate  black-text">more_vert</i></a></li>
   </ul>
     <ul class="right right-2 valign-wrapper">
-         <li class="valign"><a (click)="component.saveItem()"><i class="material-icons-outlined  black-text">save</i></a></li>
-        <li class="valign"><a><i class="material-icons-outlined  black-text">refresh</i></a></li>
-        <li class="valign"><a><i class="material-icons-outlined  black-text">more_vert</i></a></li>
+         <li class="valign"><a (click)="component.saveItem()"><i class="material-icons-outlined notranslate  black-text">save</i></a></li>
+        <li class="valign"><a><i class="material-icons-outlined notranslate  black-text">refresh</i></a></li>
+        <li class="valign"><a><i class="material-icons-outlined notranslate  black-text">more_vert</i></a></li>
       </ul>
 </div>
