--- a/src/app/testing/controls/step-controls/step-controls.component.html
+++ b/src/app/testing/controls/step-controls/step-controls.component.html
@@ -1,13 +1,13 @@
 <div id="step-controls" class="row">
     <a class="step-button link">
-        <i class="material-symbols-outlined" [ngClass]="testing.playerOrder ? 'black-text' : 'blue-text'" (click)="reverseOrder()">swap_horiz</i>
+        <i class="material-symbols-outlined notranslate" [ngClass]="testing.playerOrder ? 'black-text' : 'blue-text'" (click)="reverseOrder()">swap_horiz</i>
     </a>
     <a class="step-button link">
-        <i class="material-symbols-outlined 
+        <i class="material-symbols-outlined notranslate 
  notranslate black-text" (click)="nextPlayert()">fast_forward</i>
     </a>
     <a class="step-button link">
-        <i class="material-symbols-outlined 
+        <i class="material-symbols-outlined notranslate 
  notranslate black-text" (click)="nextRound()">skip_next</i>
     </a>
 </div>
