--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -1,4 +1,4 @@
-<div id="hero" class="row">
+<div id="hero" class="row bottom-0">
   <div class="col s12 center">
     <img src="assets/img/logo.png" class="responsive-img">
     <h2 class="center white-text ">Seu boardgame personalizado!</h2>
